SFDC Automation/src/objects/Lead_Referral__c.object
<CustomObject>
    <description>This object is a SF2SF shared object with the SCS org.</description>
    <fields>
        <fullName>Account_DUNS__c</fullName>
        <label>Account DUNS</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Appointment_Date__c</fullName>
        <label>Appointment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Appointment_Time__c</fullName>
        <label>Appointment Time</label>
        <picklist>
            <picklistValues>
                <fullName>7 : 00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7 : 15 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7 : 30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7 : 45 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8 : 00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8 : 15 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8 : 30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8 : 45 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9 : 00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9 : 15 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9 : 30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9 : 45 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10 : 00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10 : 15 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10 : 30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10 : 45 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11 : 00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11 : 15 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11 : 30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11 : 45 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12 : 00 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12 : 15 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12 : 30 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12 : 45 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1 : 00 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1 : 15 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1 : 30 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1 : 45 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 : 00 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 : 15 PM</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Authority__c</fullName>
        <label>Authority</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>BDM_Notes__c</fullName>
        <label>BDM Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Budget__c</fullName>
        <label>Budget</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Carrier_Name__c</fullName>
        <label>Carrier Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Close_Date__c</fullName>
        <description>Close date of opportunity</description>
        <label>Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contact_Address__c</fullName>
        <formula>Contact_Name__r.MailingStreet &amp;&apos; &apos;&amp;  Contact_Name__r.MailingCity &amp; &apos; &apos;&amp; Contact_Name__r.MailingState&amp; &apos;,&apos; &amp;&apos; &apos;&amp; Contact_Name__r.MailingPostalCode</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Email__c</fullName>
        <formula>Contact_Name__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact Name</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Referrals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact_Title__c</fullName>
        <formula>Contact_Name__r.Title</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DBA_Field__c</fullName>
        <label>DBA Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_Passed__c</fullName>
        <inlineHelpText>MM-YY</inlineHelpText>
        <label>Date Passed (MM-YY)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Ever_Leased__c</fullName>
        <label>Ever Leased?</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>FMS_Account_Name_LU__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>FMS Account Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Lead_Referrals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FMS_Close_Date__c</fullName>
        <label>FMS Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FMS_Description__c</fullName>
        <label>FMS Description</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FMS_Opp_Stage__c</fullName>
        <formula>TEXT(FMS_Opportunity_Name__r.StageName)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>FMS Opp Stage</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FMS_Opportunity_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipName>Lead_Referrals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FMS_Oppty_Amount__c</fullName>
        <label>FMS Oppty Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FMS_Oppty_Created_Date__c</fullName>
        <label>FMS Oppty Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>FMS_Oppty_Name__c</fullName>
        <label>FMS Oppty Name</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FMS_Oppty_Owner__c</fullName>
        <label>FMS Oppty Owner</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FMS_Oppty_Reason_Won_Lost__c</fullName>
        <label>FMS Oppty Reason/Won/Lost</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FMS_Oppty_Stage__c</fullName>
        <label>FMS Oppty Stage</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FMS_Oppty_Total_Vehicles__c</fullName>
        <label>FMS Oppty Total Vehicles</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FMS_Oppty_Win_Loss_Notes__c</fullName>
        <label>FMS Oppty Win/Loss Notes</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FMS_Salesperson__c</fullName>
        <inlineHelpText>Who did you pass this lead to?</inlineHelpText>
        <label>Lead Passed To</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>FMS_Total_units__c</fullName>
        <label>FMS Total units</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Industry__c</fullName>
        <label>Industry</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Initiative__c</fullName>
        <label>Initiative</label>
        <picklist>
            <picklistValues>
                <fullName>BDM Top 20</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contact me now</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DBD Top 20</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MQL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>National Tag Team</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>On Demand</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ryder OK (800#)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Web Inquiry</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Is_there_an_opportunity__c</fullName>
        <label>Is there an opportunity?</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Lead_Stage__c</fullName>
        <label>Lead Stage</label>
        <picklist>
            <picklistValues>
                <fullName>Not Started</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Qualifying</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Disqualified</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Opportunity</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Leased_With__c</fullName>
        <label>Leased With</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Meeting_Held__c</fullName>
        <label>Meeting Held</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Need__c</fullName>
        <label>Need</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Next_Steps__c</fullName>
        <label>Next Steps</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Objective__c</fullName>
        <label>Objective</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Opportunity_Detail__c</fullName>
        <label>Referral Detail</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>OpptyAmt__c</fullName>
        <formula>FMS_Opportunity_Name__r.EST_DEAL_VAL__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>OpptyAmt</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OpptyOwner__c</fullName>
        <formula>FMS_Opportunity_Name__r.Owner.FirstName + &apos;,&apos; + FMS_Opportunity_Name__r.Owner.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>OpptyOwner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Details__c</fullName>
        <label>Other Details</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Own_Capital_or_Bank__c</fullName>
        <label>Own? (Capital or Bank)</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PreQualified_Credit_Score__c</fullName>
        <label>PreQualified Credit Score</label>
        <picklist>
            <picklistValues>
                <fullName>0</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Reason_for_Disqualification__c</fullName>
        <label>Reason for Disqualification</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Referral_Contact__c</fullName>
        <label>Referral Contact</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Referral_Email_Address__c</fullName>
        <label>Referral Email Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Referral_Phone__c</fullName>
        <label>Referral Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Rent__c</fullName>
        <label>Rent</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SCS_ACC_Name__c</fullName>
        <label>SCS ACC Name</label>
        <length>90</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SCS_Referral_Type__c</fullName>
        <label>SCS Referral Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SCS_Sales_rep__c</fullName>
        <label>SCS Sales rep</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Seasonal_Rental__c</fullName>
        <label>Seasonal Rental?</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>States_Traveled__c</fullName>
        <label>States Traveled</label>
        <picklist>
            <picklistValues>
                <fullName>AK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AZ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GU</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ID</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ME</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MS</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>TSA_Approved_By_Manager__c</fullName>
        <label>TSA Approved By Manager</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>TSA_Initiative_Other_Notes__c</fullName>
        <label>TSA Initiative Other Notes</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Timeframe__c</fullName>
        <label>Timeframe</label>
        <picklist>
            <picklistValues>
                <fullName>1 Month</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 Months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3 Months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4 Months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5 Months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6 Months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7 Months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8 Months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9 Months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10 Months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11 Months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12 Months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12 + Months</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Type_of_Cargo__c</fullName>
        <label>Type of Cargo</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>With_Whom__c</fullName>
        <label>With Whom?</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Years_in_Business__c</fullName>
        <label>Years in Business</label>
        <picklist>
            <picklistValues>
                <fullName>Under 1 Year</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1 to 3  Years</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3 to 5  Years</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5 to 10 Years</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10 to 20 Years</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>20+  Years</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Referral</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All_SCS_Referrals</fullName>
        <columns>SCS_ACC_Name__c</columns>
        <columns>SCS_Sales_rep__c</columns>
        <columns>FMS_Salesperson__c</columns>
        <columns>Date_Passed__c</columns>
        <columns>Account_DUNS__c</columns>
        <columns>Opportunity_Detail__c</columns>
        <columns>NAME</columns>
        <columns>Meeting_Held__c</columns>
        <columns>FMS_Account_Name_LU__c</columns>
        <columns>FMS_Description__c</columns>
        <columns>Next_Steps__c</columns>
        <columns>FMS_Opportunity_Name__c</columns>
        <columns>FMS_Oppty_Stage__c</columns>
        <columns>FMS_Oppty_Amount__c</columns>
        <columns>FMS_Oppty_Owner__c</columns>
        <filterScope>Everything</filterScope>
        <label>All SCS Referrals</label>
    </listViews>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Lead Referral Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Referrals</pluralLabel>
    <recordTypes>
        <fullName>FMS_to_SCS</fullName>
        <active>true</active>
        <description>Leads passed to SCS</description>
        <label>FMS to SCS</label>
    </recordTypes>
    <recordTypes>
        <fullName>SCS_to_FMS</fullName>
        <active>true</active>
        <description>Leads passed from SCS</description>
        <label>SCS to FMS</label>
    </recordTypes>
    <recordTypes>
        <fullName>TM_to_FMS</fullName>
        <active>true</active>
        <label>TM to FMS</label>
    </recordTypes>
    <recordTypes>
        <fullName>TSA_Appointments</fullName>
        <active>true</active>
        <label>TSA Appointments</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Ever_Leased</fullName>
        <active>true</active>
        <description>If ever leased a truck &quot; with whom&quot; field cannot be blank</description>
        <errorConditionFormula>( RecordType.Name = &apos;TSA Appointments&apos;)
&amp;&amp;(ISPICKVAL ( Ever_Leased__c , &apos;Yes&apos;))
&amp;&amp;(ISBLANK( Leased_With__c ))</errorConditionFormula>
        <errorDisplayField>Leased_With__c</errorDisplayField>
        <errorMessage>Please enter the Company Name</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Is_the_Truck_Rented</fullName>
        <active>true</active>
        <description>If the truck is rented, with whom cannot be blank</description>
        <errorConditionFormula>( RecordType.Name = &apos;TSA Appointments&apos;)
&amp;&amp;(ISPICKVAL ( Rent__c , &apos;Yes&apos;))
&amp;&amp;(ISBLANK( With_Whom__c ))</errorConditionFormula>
        <errorDisplayField>With_Whom__c</errorDisplayField>
        <errorMessage>Please Enter Company Name</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Is_there_an_opportunity</fullName>
        <active>true</active>
        <description>If there is an opportunity, enter the opportunity name</description>
        <errorConditionFormula>( RecordType.Name  = &apos;TSA Appointments&apos;)
 &amp;&amp;(ISPICKVAL (Is_there_an_opportunity__c, &apos;Yes&apos;))
 &amp;&amp;(ISBLANK(FMS_Opportunity_Name__c))</errorConditionFormula>
        <errorDisplayField>FMS_Opportunity_Name__c</errorDisplayField>
        <errorMessage>Please Enter the Opportunity Name</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Only_TSA_Can_Edit_Qualification_Section</fullName>
        <active>true</active>
        <description>Fields in this section are only editable by TSA (marketing automation profile).</description>
        <errorConditionFormula>AND
(
   ISCHANGED(Budget__c)
|| ISCHANGED(Authority__c)
|| ISCHANGED(Need__c)  
|| ISCHANGED(Timeframe__c) 
|| ISCHANGED( Other_Details__c )  
|| ISCHANGED(PreQualified_Credit_Score__c),
   RecordType.Name = &apos;TSA Appointments&apos;    
&amp;&amp; ($Profile.Name &lt;&gt; &apos;Marketing Automation TSA&apos;)
&amp;&amp; ($Profile.Name &lt;&gt; &apos;Marketing Automation TSA Manager&apos;)
&amp;&amp; ($Profile.Name &lt;&gt; &apos;System Administrator&apos;)
&amp;&amp; ($Profile.Name &lt;&gt; &apos;SSO System Administrator&apos;)
&amp;&amp; ($Profile.Name &lt;&gt; &apos;Business Admin&apos;)
&amp;&amp; ($Profile.Name &lt;&gt; &apos;Business Admin Non SSO&apos;)
&amp;&amp; ($Profile.Name &lt;&gt; &apos;Bulk Delete System Administrator&apos;)
)</errorConditionFormula>
        <errorMessage>Only TSA and Admin can update Pre - Qualification Section</errorMessage>
    </validationRules>
</CustomObject>